# idx-decoder

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
